feat: ensure GetFilms calls getFilmsRepository

--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only --clear -r dotenv/config --inspect=0.0.0.0:9229 src/main",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "npm run test -- --coverage"
+  },
   "devDependencies": {
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.7",
