--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.7",
+    "@types/pg-promise": "^5.4.3",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -22,5 +23,9 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "pg-promise": "^10.12.1",
+    "typeorm": "^0.2.29"
   }
 }
