--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-DB_NAME=wa_test
-DB_USER=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
 DB_PASSWORD=admin123456
+DB_DATABASE=wa_test
