--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --clear -r dotenv/config --inspect=0.0.0.0:9229 src/main",
+    "dev": "ts-node-dev --respawn --transpile-only --clear -r dotenv/config --inspect=0.0.0.0:9229 src/main/server.ts",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
+    "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.7",
     "@types/pg-promise": "^5.4.3",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
@@ -22,10 +25,15 @@
     "jest": "^29.2.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "module-alias": "^2.2.2",
     "pg-promise": "^10.12.1",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29"
   }
 }
