--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
+    "rootDir": "",
     "outDir": "dist",
-    "rootDir": "src",
     "target": "ESNext",
     "sourceMap": true,
     "skipLibCheck": true,
