--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
+    "pg-mem": "^2.6.3",
     "pg-promise": "^10.12.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29"
