--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "test:coverage": "npm run test -- --coverage"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.7",
     "@types/pg-promise": "^5.4.3",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -25,11 +27,13 @@
     "git-commit-msg-linter": "^4.2.1",
     "jest": "^29.2.2",
     "rimraf": "^3.0.2",
+    "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
