chore: inits swagger config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     },
     "strict": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "resolveJsonModule": true
   },
   "include": ["src", "tests"],
 }
