--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^18.11.7",
     "@types/pg-promise": "^5.4.3",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -40,6 +41,7 @@
     "pg-mem": "^2.6.3",
     "pg-promise": "^10.12.1",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.5.0",
     "typeorm": "^0.2.29"
   }
 }
