--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,24 @@
 version: '3.7'
 
 services:
+  app:
+    build: .
+    container_name: work-anywhere-test
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    ports:
+      - 3000:3000
+    depends_on:
+      - pg
+
   pg:
     image: postgres:14-alpine
     restart: always
     ports:
       - 5432:5432
     environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
+      POSTGRES_DB: ${DB_DATABASE}
+      POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
