--- a/package.json
+++ b/package.json
@@ -6,21 +6,20 @@
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "dev": "ts-node-dev --respawn --transpile-only --clear -r dotenv/config --inspect=0.0.0.0:9229 src/main/server.ts",
+    "start": "node dist/src/main/server.js",
     "test": "jest --passWithNoTests --no-cache --runInBand --forceExit",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
     "create-migration": "npm run typeorm migration:create -- -d src/infra/database/postgres/migrations/ -n",
-    "run-migrations": "npm run build && npm run typeorm migration:run"
+    "run-migrations": "npm run typeorm migration:run"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.7",
-    "@types/pg-promise": "^5.4.3",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
@@ -30,7 +29,6 @@
     "eslint-plugin-promise": "^6.1.1",
     "git-commit-msg-linter": "^4.2.1",
     "jest": "^29.2.2",
-    "rimraf": "^3.0.2",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
@@ -41,9 +39,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
-    "pg-mem": "^2.6.3",
     "pg-promise": "^10.12.1",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
     "swagger-ui-express": "^4.5.0",
     "typeorm": "^0.2.29"
   }
